calico-policies/private-network-isolation/eu-de/allow-egress-pods-private.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers,
# ports 443 and 3260 for communication to block storage,
# port 10250 for the openVPN pod, port 4443 or 6443 for metrics-server, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy. It also
# allows pod access to other pods, denies access to private networks but allows access to
# public networks, and allows access in each zone of the region to the master.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 4443 # Kubernetes 1.19 or later
      - 6443 # OpenShift 4.3 or later
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    # Allows pod egress to all other pods
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  # Denies pod egress to private networks. If workers are connected to a public VLAN,
  # pod egress is permitted to public networks.
  - action: Allow
    # Allows pod egress to all destination IPs that are NOT private.  This means that pod egress to these
    # private subnets listed below are denied (unless another policy allows it)
    destination:
      notNets:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for eu-central: ams03, mil01, par01, fra02, fra04, fra05
      - 166.9.28.17/32
      - 166.9.28.19/32
      - 166.9.28.23/32
      - 166.9.28.24/32
      - 166.9.28.42/32
      - 166.9.28.43/32
      - 166.9.28.59/32
      - 166.9.28.64/32
      - 166.9.28.84/32
      - 166.9.28.87/32
      - 166.9.28.91/32
      - 166.9.28.92/32
      - 166.9.28.93/32
      - 166.9.28.94/32
      - 166.9.28.95/32
      - 166.9.28.107/32
      - 166.9.28.112/32
      - 166.9.28.137/32
      - 166.9.28.165/32
      - 166.9.28.203/32
      - 166.9.28.233/32
      - 166.9.28.235/32
      - 166.9.28.240/32
      - 166.9.30.9/32
      - 166.9.30.12/32
      - 166.9.30.13/32
      - 166.9.30.21/32
      - 166.9.30.22/32
      - 166.9.30.41/32
      - 166.9.30.43/32
      - 166.9.30.54/32
      - 166.9.30.55/32
      - 166.9.30.56/32
      - 166.9.30.57/32
      - 166.9.30.92/32
      - 166.9.30.99/32
      - 166.9.30.100/32
      - 166.9.30.116/32
      - 166.9.30.118/32
      - 166.9.30.135/32
      - 166.9.30.154/32
      - 166.9.32.9/32
      - 166.9.32.19/32
      - 166.9.32.20/32
      - 166.9.32.26/32
      - 166.9.32.27/32
      - 166.9.32.44/32
      - 166.9.32.45/32
      - 166.9.32.53/32
      - 166.9.32.54/32
      - 166.9.32.55/32
      - 166.9.32.56/32
      - 166.9.32.84/32
      - 166.9.32.85/32
      - 166.9.32.87/32
      - 166.9.32.88/32
      - 166.9.32.101/32
      - 166.9.32.125/32
      - 166.9.32.185/32
      - 166.9.32.188/32
      - 166.9.248.77/32
      - 166.9.248.106/32
      - 166.9.248.137/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for eu-central: ams03, mil01, par01, fra02, fra04, fra05
      - 166.9.28.17/32
      - 166.9.28.19/32
      - 166.9.28.23/32
      - 166.9.28.24/32
      - 166.9.28.42/32
      - 166.9.28.43/32
      - 166.9.28.59/32
      - 166.9.28.64/32
      - 166.9.28.84/32
      - 166.9.28.87/32
      - 166.9.28.91/32
      - 166.9.28.92/32
      - 166.9.28.93/32
      - 166.9.28.94/32
      - 166.9.28.95/32
      - 166.9.28.107/32
      - 166.9.28.112/32
      - 166.9.28.137/32
      - 166.9.28.165/32
      - 166.9.28.203/32
      - 166.9.28.233/32
      - 166.9.28.235/32
      - 166.9.28.240/32
      - 166.9.30.9/32
      - 166.9.30.12/32
      - 166.9.30.13/32
      - 166.9.30.21/32
      - 166.9.30.22/32
      - 166.9.30.41/32
      - 166.9.30.43/32
      - 166.9.30.54/32
      - 166.9.30.55/32
      - 166.9.30.56/32
      - 166.9.30.57/32
      - 166.9.30.92/32
      - 166.9.30.99/32
      - 166.9.30.100/32
      - 166.9.30.116/32
      - 166.9.30.118/32
      - 166.9.30.135/32
      - 166.9.30.154/32
      - 166.9.32.9/32
      - 166.9.32.19/32
      - 166.9.32.20/32
      - 166.9.32.26/32
      - 166.9.32.27/32
      - 166.9.32.44/32
      - 166.9.32.45/32
      - 166.9.32.53/32
      - 166.9.32.54/32
      - 166.9.32.55/32
      - 166.9.32.56/32
      - 166.9.32.84/32
      - 166.9.32.85/32
      - 166.9.32.87/32
      - 166.9.32.88/32
      - 166.9.32.101/32
      - 166.9.32.125/32
      - 166.9.32.185/32
      - 166.9.32.188/32
      - 166.9.248.77/32
      - 166.9.248.106/32
      - 166.9.248.137/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
