calico-policies/private-network-isolation/eu-de/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for eu-central: ams03, mil01, osl01, par01, fra02, fra04, fra05
      - 166.9.28.107/32
      - 166.9.28.112/32
      - 166.9.28.137/32
      - 166.9.28.165/32
      - 166.9.28.17/32
      - 166.9.28.19/32
      - 166.9.28.203/32
      - 166.9.28.23/32
      - 166.9.28.233/32
      - 166.9.28.235/32
      - 166.9.28.24/32
      - 166.9.28.240/32
      - 166.9.28.42/32
      - 166.9.28.43/32
      - 166.9.28.59/32
      - 166.9.28.64/32
      - 166.9.28.73/32
      - 166.9.28.74/32
      - 166.9.28.75/32
      - 166.9.28.84/32
      - 166.9.28.87/32
      - 166.9.28.91/32
      - 166.9.28.92/32
      - 166.9.28.93/32
      - 166.9.28.94/32
      - 166.9.28.95/32
      - 166.9.30.100/32
      - 166.9.30.116/32
      - 166.9.30.118/32
      - 166.9.30.12/32
      - 166.9.30.13/32
      - 166.9.30.135/32
      - 166.9.30.154/32
      - 166.9.30.21/32
      - 166.9.30.22/32
      - 166.9.30.41/32
      - 166.9.30.43/32
      - 166.9.30.54/32
      - 166.9.30.55/32
      - 166.9.30.56/32
      - 166.9.30.57/32
      - 166.9.30.9/32
      - 166.9.30.92/32
      - 166.9.30.99/32
      - 166.9.32.101/32
      - 166.9.32.125/32
      - 166.9.32.185/32
      - 166.9.32.188/32
      - 166.9.32.19/32
      - 166.9.32.20/32
      - 166.9.32.26/32
      - 166.9.32.27/32
      - 166.9.32.44/32
      - 166.9.32.45/32
      - 166.9.32.53/32
      - 166.9.32.54/32
      - 166.9.32.55/32
      - 166.9.32.56/32
      - 166.9.32.84/32
      - 166.9.32.85/32
      - 166.9.32.87/32
      - 166.9.32.88/32
      - 166.9.32.9/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for eu-central: ams03, mil01, osl01, par01, fra02, fra04, fra05
      - 166.9.28.107/32
      - 166.9.28.112/32
      - 166.9.28.137/32
      - 166.9.28.165/32
      - 166.9.28.17/32
      - 166.9.28.19/32
      - 166.9.28.203/32
      - 166.9.28.23/32
      - 166.9.28.233/32
      - 166.9.28.235/32
      - 166.9.28.24/32
      - 166.9.28.240/32
      - 166.9.28.42/32
      - 166.9.28.43/32
      - 166.9.28.59/32
      - 166.9.28.64/32
      - 166.9.28.73/32
      - 166.9.28.74/32
      - 166.9.28.75/32
      - 166.9.28.84/32
      - 166.9.28.87/32
      - 166.9.28.91/32
      - 166.9.28.92/32
      - 166.9.28.93/32
      - 166.9.28.94/32
      - 166.9.28.95/32
      - 166.9.30.100/32
      - 166.9.30.116/32
      - 166.9.30.118/32
      - 166.9.30.12/32
      - 166.9.30.13/32
      - 166.9.30.135/32
      - 166.9.30.154/32
      - 166.9.30.21/32
      - 166.9.30.22/32
      - 166.9.30.41/32
      - 166.9.30.43/32
      - 166.9.30.54/32
      - 166.9.30.55/32
      - 166.9.30.56/32
      - 166.9.30.57/32
      - 166.9.30.9/32
      - 166.9.30.92/32
      - 166.9.30.99/32
      - 166.9.32.101/32
      - 166.9.32.125/32
      - 166.9.32.185/32
      - 166.9.32.188/32
      - 166.9.32.19/32
      - 166.9.32.20/32
      - 166.9.32.26/32
      - 166.9.32.27/32
      - 166.9.32.44/32
      - 166.9.32.45/32
      - 166.9.32.53/32
      - 166.9.32.54/32
      - 166.9.32.55/32
      - 166.9.32.56/32
      - 166.9.32.84/32
      - 166.9.32.85/32
      - 166.9.32.87/32
      - 166.9.32.88/32
      - 166.9.32.9/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
