calico-policies/private-network-isolation/eu-de/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: EU Central registry subnets
      - 166.9.248.76/32
      - 166.9.248.105/32
      - 166.9.248.136/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: eu-de
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.28.71/32
      - 166.9.30.53/32
      - 166.9.32.51/32
      - 166.9.209.205/32
      - 166.9.209.227/32
      - 166.9.210.13/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: eu-de
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.248.88/32
      - 166.9.248.120/32
      - 166.9.248.152/32
      - 166.9.209.205/32
      - 166.9.209.227/32
      - 166.9.210.13/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: eu-de
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.28.2/32
      - 166.9.28.3/32
      - 166.9.30.231/32
      - 166.9.30.238/32
      - 166.9.32.21/32
      - 166.9.32.7/32
      # New IP addresses added on 1/19/2023
      - 166.9.30.45/32 
      - 166.9.28.159/32 
      - 166.9.32.117/32
      # New IP addresses added on 10/30/2023
      - 166.9.248.116/32
      - 166.9.248.149/32
      - 166.9.248.85/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU DE nets
      - 166.9.28.5/32
      - 166.9.32.23/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU DE nets
      - 166.9.28.7/32
      - 166.9.32.24/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
